2013-07-08  Eli Zaretskii  <eliz@gnu.org>

	* simple.el (line-move-partial, line-move): Account for
	line-spacing.
	(line-move-partial): Avoid setting vscroll when the last
	partially-visible line in window is of default height.

2013-07-08  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* net/shr.el (shr-map): Reinstate the `u' key binding, since it's
	been used a while.

2013-07-07  Juanma Barranquero  <lekktu@gmail.com>

	* subr.el (read-quoted-char): Remove unused local variable `char'.

2013-07-07  Michael Kifer  <kifer@cs.stonybrook.edu>
            Stefan Monnier  <monnier@iro.umontreal.ca>

	* faces.el (tty-run-terminal-initialization): Function changed.

	* viper.el (viper-emacs-state-mode-list): Add egg-status-buffer-mode.
	(viper-version): Version update.
	(viper-go-away, viper-setup-hooks): Function changed.
	(viper--lookup-key, viper-catch-tty-ESC, viper-uncatch-tty-ESC)
	(viper-setup-ESC-to-escape): New functions.

	* viper-cmd.el (viper-del-forward-char-in-insert): New function.
	(viper-save-kill-buffer): Check if buffer is modified.
	(viper-envelop-ESC-key): Function deleted.
	(viper-intercept-ESC-key): Function changed.

	* viper-keym.el (viper-ESC-key): Constant changed.

	* ediff.el (ediff-files-command, ediff3-files-command): New functions.
	(ediff-merge-command, ediff-merge-with-ancestor-command): New functions.
	(ediff-directories-command, ediff-directories3-command): New functions.
	(ediff-merge-directories-command): New function.
	(ediff-merge-directories-with-ancestor-command): New function.
	All the above are command-line interfaces to ediff: facilitate calling
	Emacs with the appropriate ediff functions invoked.
	(ediff-version): Version update.

2013-07-07  Eli Zaretskii  <eliz@gnu.org>

	* simple.el (default-font-height, window-screen-lines):
	New functions.
	(line-move, line-move-partial): Use them instead of
	frame-char-height and window-text-height.  This makes scrolling
	text smoother when the buffer's default face uses a font that is